[gd_scene load_steps=5 format=3 uid="uid://bkocqf07lip7d"]

[ext_resource type="Script" path="res://Scenes/UI/SkillsPanel.gd" id="1_5m5ou"]
[ext_resource type="Texture2D" uid="uid://bnrai4i5kisvc" path="res://Resources/GUI/InventoryBackground.png" id="1_peknn"]
[ext_resource type="Texture2D" uid="uid://bdjyxmpijarxb" path="res://Resources/GUI/Button2.png" id="3_wnql3"]
[ext_resource type="Texture2D" uid="uid://cna2b1sy6ne6s" path="res://Resources/GUI/Button2Pressed.png" id="4_2l7gn"]

[node name="Skills" type="Control" groups=["Panel"]]
texture_filter = 1
custom_minimum_size = Vector2(126, 203)
layout_mode = 3
anchor_left = 0.677
anchor_top = 0.187
anchor_right = 0.94
anchor_bottom = 0.834
offset_left = 0.039978
offset_top = 0.159996
offset_right = -0.200012
offset_bottom = -3.88
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5m5ou")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_peknn")

[node name="ActiveSkills" type="Control" parent="Background"]
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.498
anchor_right = 0.5
anchor_bottom = 0.498
offset_left = -63.0
offset_top = -85.094
offset_right = 63.0
offset_bottom = 84.906
grow_horizontal = 2
grow_vertical = 2

[node name="Grid" type="GridContainer" parent="Background/ActiveSkills"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.024
anchor_top = 0.012
anchor_right = 0.976
anchor_bottom = 1.0
offset_left = -0.0239999
offset_top = -0.04
offset_right = 0.0239944
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 5

[node name="PasiveSkills" type="Control" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.0
offset_top = -85.5
offset_right = 63.0
offset_bottom = 84.5
grow_horizontal = 2
grow_vertical = 2

[node name="Grid" type="GridContainer" parent="Background/PasiveSkills"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.024
anchor_top = 0.006
anchor_right = 0.976
anchor_bottom = 0.994
offset_left = -0.0239999
offset_top = -0.02
offset_right = 0.0239944
offset_bottom = 0.0200043
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 5

[node name="Buttons" type="Control" parent="Background"]
anchors_preset = 0
offset_top = 171.0
offset_right = 126.0
offset_bottom = 202.0

[node name="ActiveSkillsButton" type="TextureButton" parent="Background/Buttons"]
custom_minimum_size = Vector2(61, 8)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.258
anchor_top = -5.226
anchor_right = 0.258
anchor_bottom = -5.226
offset_left = -30.508
offset_top = -3.99399
offset_right = 30.492
offset_bottom = 4.00601
texture_normal = ExtResource("3_wnql3")
texture_pressed = ExtResource("4_2l7gn")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Background/Buttons/ActiveSkillsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 7
text = "ACTIVE SKILLS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PasiveSkillsButton" type="TextureButton" parent="Background/Buttons"]
custom_minimum_size = Vector2(61, 8)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.742
anchor_top = -5.226
anchor_right = 0.742
anchor_bottom = -5.226
offset_left = -30.492
offset_top = -3.99399
offset_right = 30.508
offset_bottom = 4.00601
texture_normal = ExtResource("3_wnql3")
texture_pressed = ExtResource("4_2l7gn")
ignore_texture_size = true
stretch_mode = 0

[node name="Use" type="Label" parent="Background/Buttons/PasiveSkillsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 7
text = "PASIVE SKILLS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Move" type="TextureButton" parent="Background/Buttons"]
custom_minimum_size = Vector2(61, 8)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.258
anchor_top = 0.71
anchor_right = 0.258
anchor_bottom = 0.71
offset_left = -30.508
offset_top = -4.01
offset_right = 30.492
offset_bottom = 3.99
texture_normal = ExtResource("3_wnql3")
texture_pressed = ExtResource("4_2l7gn")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Background/Buttons/Move"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 7
text = "MOVE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Info" type="TextureButton" parent="Background/Buttons"]
custom_minimum_size = Vector2(61, 8)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.742
anchor_top = 0.71
anchor_right = 0.742
anchor_bottom = 0.71
offset_left = -30.492
offset_top = -4.01
offset_right = 30.508
offset_bottom = 3.99
texture_normal = ExtResource("3_wnql3")
texture_pressed = ExtResource("4_2l7gn")
ignore_texture_size = true
stretch_mode = 0

[node name="Use" type="Label" parent="Background/Buttons/Info"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 7
text = "INFO"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Background/Buttons/ActiveSkillsButton" to="." method="_on_active_skills_button_pressed"]
[connection signal="pressed" from="Background/Buttons/PasiveSkillsButton" to="." method="_on_pasive_skills_button_pressed"]
[connection signal="pressed" from="Background/Buttons/Move" to="." method="_on_move_pressed"]
[connection signal="pressed" from="Background/Buttons/Info" to="." method="_on_info_pressed"]
